--- a/texts/common/Footer.html
+++ b/texts/common/Footer.html
@@ -1,3 +1,7 @@
 <part id="Footer" parent="body" index="9999" params="null">
-    <div>and your <strong>footer</strong> last</div>
+    <div id="footerDiv">and your <strong>footer</strong> last</div>
 </part>
+
+<script>
+    // const footerStore = new Store('footer');
+</script>
