--- a/texts/common/Header.html
+++ b/texts/common/Header.html
@@ -1,3 +1,7 @@
 <part id="Header" parent="body" index="0" params="null">
     <div>Remember to load your <strong>header</strong> first</div>
 </part>
+
+<script>
+    // const headerStore = new Store('header');
+</script>
