--- a/texts/Home.html
+++ b/texts/Home.html
@@ -5,5 +5,14 @@
 </part>
 
 <script>
-    // const homeStore = new Store('home');
+    import * as nothing from './Clean.js';
+    // import {sayHi, a} from '../scripts/Modules.js';
+    // console.log('hi')
+    // console.log('test', a)
+    // sayHi()
+    const homeStore = new Store('home');
+    var u0/* sadojf lksdf lk      
+            asdfsadf
+    */= 'sojdk,'
+    console.log(now);
 </script>
