--- a/texts/common/Footer.html
+++ b/texts/common/Footer.html
@@ -1,5 +1,6 @@
 <div id="footerDiv">and your <strong>footer</strong> last</div>
 
 <script>
-    // const footerStore = new Store('footer');
+    const footerStore = new Store('footer');
+    // console.log(homeStore);
 </script>
