--- a/texts/common/Footer.html
+++ b/texts/common/Footer.html
@@ -1,6 +1,6 @@
 <div id="footerDiv">and your <strong>footer</strong> last</div>
 
-<script>
-    const footerStore = new Store('footer');
+<script params="pets, age, name">
     // console.log(homeStore);
+    let a = 'b';
 </script>
