--- a/texts/buttons/ChangeStateButton.html
+++ b/texts/buttons/ChangeStateButton.html
@@ -1,4 +1,5 @@
-<button piece="changeStateBtn"></button>
+<button id="changeStateBtn"></button>
+<Footer id="newHome"></Footer>
 
 <script>
     // const changeStateBtn = document.querySelector('[piece=changeStateBtn]');
@@ -14,4 +15,9 @@
     // let apps = { dynasty: { app: {} } } 
     // console.log(now)
     // now.check('target')
+
+
+    let btn = elt('#changeStateButton');
+    store.toggle(btn, 'text', 'State 1', 'State 2');
+    store.link('text', [btn, 'textContent']);
 </script>
