--- a/texts/Home.html
+++ b/texts/Home.html
@@ -1,18 +1,20 @@
 <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ddd" fill-opacity="1" d="M0,160L48,138.7C96,117,192,75,288,58.7C384,43,480,53,576,85.3C672,117,768,171,864,197.3C960,224,1056,224,1152,192C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg></div>
-<h1>Welcome to CleanJS</h1>
+<h1 id="title">Welcome to CleanJS</h1>
 <ChangeStateButton id="homeStateBtn"></ChangeStateButton>
 <div id="lowerSvg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319"><path fill="#7a7aa3" fill-opacity="1" d="M0,160L48,138.7C96,117,192,75,288,58.7C384,43,480,53,576,85.3C672,117,768,171,864,197.3C960,224,1056,224,1152,192C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg></div>
 
 <script params="someParam, someOtherParam">
-    import * as nothing from './Clean.js';
+    // import * as nothing from './Clean.js';
     // import {sayHi, a} from '../scripts/Modules.js';
     // console.log('hi')
     // console.log('test', a)
     // sayHi()
+    store.toggle('#title', 'titleText', 'Enjoy your stay', 'Welcome to CleanJS');
+    store.link('titleText', ['#title', 'textContent']);
     const homeStore = new Store('home');
     var u0/* sadojf lksdf lk      
             asdfsadf
-    */= 'sojdk,'
+    */= 'sojdk,';
     console.log(now);
 </script>
 
