--- a/texts/buttons/ChangeStateButton.html
+++ b/texts/buttons/ChangeStateButton.html
@@ -1,6 +1,7 @@
 <button id="changeStateBtn"></button>
 <Footer id="newHome"></Footer>
 
+
 <script>
     // const changeStateBtn = document.querySelector('[piece=changeStateBtn]');
     // const stateBtnStore = new Store(
@@ -17,7 +18,7 @@
     // now.check('target')
 
 
-    let btn = elt('#changeStateButton');
-    store.toggle(btn, 'text', 'State 1', 'State 2');
-    store.link('text', [btn, 'textContent']);
+    // let btn = elt('#changeStateButton');
+    // store.toggle(btn, 'text', 'State 1', 'State 2');
+    // store.link('text', [btn, 'textContent']);
 </script>
