--- a/texts/common/Footer.html
+++ b/texts/common/Footer.html
@@ -1,6 +1,15 @@
-<div id="footerDiv">and your <strong>${data.footerValue}</strong> last</div>
+<div id="footerDiv">and your <strong>data.footerValue</strong> last</div>
 
 <script params="pets, age, name=null">
     // console.log(homeStore);
     let a = 'b';
 </script>
+
+<store>
+    state: {
+        footerValue: 'WORKING'
+    }
+    traps: {
+
+    }
+</store>
