--- a/texts/Home.html
+++ b/texts/Home.html
@@ -6,6 +6,8 @@
 <script>
     store.link('titleText', ['#title', 'textContent']);
     store.toggle('#title', 'titleText', 'Enjoy your stay', 'Welcome to CleanJS');
+    // on('click', elt('#title'), _=> now._activeParts = ['remove', 'Footer']);
+    // on('click', elt('#title'), _=> now._activeParts = ['add', 'Footer']);
 </script>
 
 <store>
