--- a/texts/common/Footer.html
+++ b/texts/common/Footer.html
@@ -7,7 +7,8 @@
 
 <store>
     state: {
-        footerValue: 'WORKING'
+        someFirstKey: 97983244,
+        footerValue: 'Some other thing'
     }
     traps: {
 
