--- a/texts/Home.html
+++ b/texts/Home.html
@@ -4,11 +4,10 @@
 <div id="lowerSvg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319"><path fill="#7a7aa3" fill-opacity="1" d="M0,160L48,138.7C96,117,192,75,288,58.7C384,43,480,53,576,85.3C672,117,768,171,864,197.3C960,224,1056,224,1152,192C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg></div>
 
 <script>
-    // console.log(part);
-    part.link('titleText', ['#title', 'textContent']);
-    part.toggle('#title', part.id, 'titleText', 'Enjoy your stay', 'Welcome to CleanJS');
-    on('click', elt('#title', part.id), _=> {now._activeParts = ['remove', 'Footer']});
-    on('click', elt('#lowerSvg', part.id), _=> now._activeParts = ['add', 'Footer', 'ChangeStateButton']);
+    let title = elt('#title', pId),
+        footer = elt('Footer', pId);
+
+    onClick(title, _=> now.live.includes(footer.id) ? now.kill(footer) : now.revive(footer));
 </script>
 
 <store>
